<resources>
    <string name="app_name">Stock Manager</string>
    <string name="navigation_drawer_open">Deschideți sertarul de navigare</string>
    <string name="navigation_drawer_close">Închideți sertarul de navigare</string>
    <string name="nav_header_title">Android</string>
    <string name="nav_header_desc">Antet de navigare</string>
    <string name="connection_failed_bluethoot">Conexiune eșuată</string>
    <string name="bluetooth_not_found">Status: Bluetooth nu a fost găsit</string>
    <string name="bluetooth_satus_enabled">Pornit</string>
    <string name="status_bluetooth_disabled">Oprit</string>
    <string name="status_bluetooth_conection">Conectare..</string>
    <string name="conected_device_bluetooth">Conectat la device-ul:</string>
    <string name="status_created_socket_bluetooth">Crearea socket-ului eșuat</string>
    <string name="status_conection_bluetooth_handler">Conexiune eșuată.</string>
    <string name="btn_check_price">Verificare preț</string>
    <string name="btn_sales_main_activity">Vânzare</string>
    <string name="btn_invoice_main_activity">Factură de intrare</string>
    <string name="btn_transfer_main_activity">Act de transfer</string>
    <string name="btn_inventariere_main_activity">Inventariere</string>
    <string name="btn_stock_asl_main_activity">Stocare asortiment</string>
    <string name="txt_con_intern_licenta">Codul intern:</string>
    <string name="txt_licenta_licenta">Licența:</string>
    <string name="btn_verificare_licenta">Verificare</string>
    <string name="txt_pincod_securitate">Pin cod:</string>
    <string name="txt_verifica_stoc_vinzare">Interzice vinzarea in rosu</string>
    <string name="txt_modificare_pincod_hint_securitate">Modificare pin cod</string>
    <string name="txt_limita_vinzare_securitate">Limita pozițiilor la vânzare:</string>
    <string name="txt_hint_limit_vinzare_securitate">*0 - limita nu este setată</string>
    <string name="btn_donload_install_new_version">Verifica versiunea</string>
    <string name="btn_donload_install_old_version">Downgrade</string>
    <string name="txt_hint_input_licenta_securitate">Licența primită</string>
    <string name="txt_header_inp_count">Introduceți cantitatea:</string>
    <string name="header_of_lista_reviziilor">Lista reviziilor</string>
    <string name="header_obout_program">Despre program</string>
    <string name="header_securitate_activity">Securitate</string>
    <string name="header_printer_activity">Imprimante</string>
    <string name="header_workplace_activity">Loc de muncă</string>
    <string name="header_conectare_activity">Conexiune</string>
    <string name="header_login_user_activity">Autentificare in bază:</string>
    <string name="header_login_user_settings">Autentificare locală:</string>
    <string name="header_login_client_activity">Autentificare client:</string>
    <string name="todo">TODO</string>
    <string name="item_menu_drawable_generale">Generale</string>
    <string name="item_menu_drawable_exit">Ieșire</string>
    <string name="item_menu_drawable_setari">Setări</string>
    <string name="txt_telefon_de_contact_abou">Tel. de contact:</string>
    <string name="txt_support_tehnic_about">Suport tehnic:</string>
    <string name="txt_departament_vinzari_about">Departament vinzari:</string>
    <string name="txt_depozit_nedeterminat">Nedeterminat</string>
    <string name="txt_barcod_header_asl">Cod de bare:</string>
    <string name="txt_cod_header_asl">Cod:</string>
    <string name="txt_marking_header_asl">Articol:</string>
    <string name="txt_remain_header_asl">Stoc:</string>
    <string name="txt_price_header_asl">Preț:</string>
    <string name="switch_show_remain_checkprice">Afișare stoc:</string>
    <string name="txt_nr_etichete_checkprice">Nr. etichete:</string>
    <string name="txt_port_conection">Port</string>
    <string name="txt_ip_adres_conection">Adresa IP</string>
    <string name="btn_test_conection">Test</string>
    <string name="btn_select_count_inventory">Manual</string>
    <string name="btn_select_auto_count_inventory">Auto (+1)</string>
    <string name="txt_cant_initiala_inventory">Cantitatea inițială</string>
    <string name="txt_cant_adaugata_inventory">Cantitatea adaugată</string>
    <string name="txt_total_all">Total</string>
    <string name="txt_accept_all">Accept</string>
    <string name="txt_factura_invoice">Factura:</string>
    <string name="txt_save_document">OK</string>
    <string name="txt_renunt_all">Renunț</string>
    <string name="txt_header_list_denumirea">Denumirea</string>
    <string name="txt_header_list_cant">Cantitatea</string>
    <string name="txt_header_list_revision_depozit">Depozit</string>
    <string name="txt_header_list_revision_numarul">Numărul</string>
    <string name="txt_creare_revizie_noua_revision">Creare revizie nouă</string>
    <string name="btn_cauta_printers">Caută</string>
    <string name="btn_asociate_printers">Asociate</string>
    <string name="btn_calibrare_printers">Calibrare</string>
    <string name="btn_descarca_eticheta_printers">Descarcă eticheta</string>
    <string name="txt_comanda_sales">Comanda:</string>
    <string name="toggle_btn_check_remain_nu">Nu</string>
    <string name="toggle_btn_check_remain_da">Da</string>
    <string name="txt_verifica_stoc_sales">Verifică stoc</string>
    <string name="btn_imprimare_sales">Imprimare</string>
    <string name="btn_adauga_client_sales">Adaugă client/comentariu</string>
    <string name="txt_header_list_suma_sales">Suma</string>
    <string name="btn_print_etichete_stock_asl">Print. etichete</string>
    <string name="txt_din_depozit_transfer">Din:</string>
    <string name="txt_in_depozit_transfer">In:</string>
    <string name="btn_loc_de_munca_nedeterminat_workplace">Loc de muncă nedeterminat</string>
    <string name="switch_afisare_cod_workpalce">Afișare cod</string>
    <string name="switch_auto_confirmare_act_transfer">Auto confirmare(Act transfer)</string>
    <string name="switch_afisare_tastatura_workplace">Afișare tastatură(dacă nu sunt butoane)</string>
    <string name="txt_grupe_pentru_vizualizare_workplace">Grupe pentru vizualizare:</string>
    <string name="btn_sterge_workplace">Șterge</string>
    <string name="txt_in_stoc_count_inventory">In stoc:</string>
    <string name="txt_total_scanat_count_inventory">Total scanat:</string>
    <string name="txt_ramas_count_inventory">Rămas:</string>
    <string name="txt_surplus_count_inventory">Surplus:</string>
    <string name="txt_cantitatea_finala_count_inventory">Cantitatea finală</string>
    <string name="txt_cantitatea_count_inventory">Cantitatea:</string>
    <string name="txt_adauga_count_inventroy">Adaugă</string>
    <string name="txt_pret_intrare_invoice">Preț intrare:</string>
    <string name="txt_suma_de_intrare_invoice">Suma de intrare:</string>
    <string name="txt_pret_vinzare_invoice">Preț vânzare:</string>
    <string name="txt_suma_de_vinzare_invoice">Suma de vânzare</string>
    <string name="txt_profit_invoice">Profit:</string>
    <string name="txt_utilizator_workplace">Utilizator:</string>
    <string name="txt_header_msg_sales_printers">Lista de imprimante</string>
    <string name="txt_header_msg_list_depozitelor">Lista de depozite</string>
    <string name="msg_depasirea_limitei_vinzare">Depasiti limita pozitiilor!</string>
    <string name="msg_dialog_close">Inchide</string>
    <string name="msg_dialog_close_ramine">Rămâne</string>
    <string name="txt_waring_documentul_nusalvat_doriti_salvati">Documentul nu a fost salvat! Doriti să inchideți documentul?</string>
    <string name="msg_dialog_title_atentie">Atenție!</string>
    <string name="msg_dialog_loading">încărcare..</string>
    <string name="msg_sales_is_saved">Contul de plată este salvat!</string>
    <string name="msg_error_code">Eroare!Codul:</string>
    <string name="msg_nu_raspuns_server">Nu există niciun răspuns din partea serviciului.</string>
    <string name="msg_imprimare_sales">Imprimare..</string>
    <string name="txt_not_printers_check_back_office">Nu sunt setate imprimante!\nVerificați imprimantele in back office.</string>
    <string name="txt_sales_invoice_saved">Contul de plată a fost salvată!\nComanda nr:</string>
    <string name="msg_document_notsaved_cod_error">Documentul nu a fost salvat! Codul erorii:</string>
    <string name="msg_document_not_saved_nu_raspuns_serviciu">Documentul nu a fost salvat! Nu există niciun răspuns din partea serviciului.</string>
    <string name="msg_errore_label_printer">Eroare la imprimanta cu etichete!</string>
    <string name="msg_erroare_la_imrpimare">Eroare la imprimare:</string>
    <string name="msg_verifica_imprimantele_bluetooth">Verificați imprimanta dacă este aprinsă,conectată sau dacă v-ați conectat la imprimanta corectă in setări.</string>
    <string name="msg_only_number_integer">Numai numere intregi!</string>
    <string name="msg_header_nr_factura">Nr. factură:</string>
    <string name="msg_continue">Continuă</string>
    <string name="msg_invoice_saved">Documentul a fost salvat!</string>
    <string name="msg_transfer_from_depozit"><![CDATA[Din depozitul >]]></string>
    <string name="msg_transfer_to_depozit"><![CDATA[In depozitul <]]></string>
    <string name="msg_transfer_saved_not_confirmed">Actul de transfer a fost salvat dar nu confirmat! Verificați in back-office!</string>
    <string name="msg_create_new_revision">Crearea reviziei!</string>
    <string name="txt_header_revizia_inventory">Revizia:</string>
    <string name="txt_inventory_not_selected_workplace">Nu este selectat locul de muncă! Selectați locul de muncă sau creați revizie nouă!</string>
    <string name="msg_btn_create_new_revision_dialog">Creare revizie nouă</string>
    <string name="msg_dialog_inventroy_select_workplace">Alege locul de muncă</string>
    <string name="msg_dialog_inchide_revizia">Doriți să finisați revizia?</string>
    <string name="msg_count_added_inventory">Adaugat.</string>
    <string name="msg_login_cod_incorect">Cod incorect!</string>
    <string name="msg_dialog_list_asl_document_not_saved">Doriți să salvați comanda? Daca doriți să ramineți ,apăsați in orice punct a ecranului.</string>
    <string name="header_list_assortment">Asortimentul pentru vinzare</string>
    <string name="msg_eroare_download_asl">Eroare la descarcarea asortimentului.Mesajul erorii:</string>
    <string name="msdownload_assortment">Descarcarea asortimentul..</string>
    <string name="msg_reload_download_asl">Doriți să incercați din nou?</string>
    <string name="msg_client_not_found">Client cu asa IDNP nu a fost găsit!</string>
    <string name="msg_count_greath_like_remain">Cantitatea mai mare decit in stoc</string>
    <string name="msg_input_count_greath_nul">Introduceți cantitatea mai mare de 0!</string>
    <string name="msg_input_incoming_price_invoice">Introduceți prețul de intrare!</string>
    <string name="msg_format_number_incorect">Format incorect!</string>
    <string name="txt_list_asl_view_barcode">Barcod:</string>
    <string name="txt_list_asl_view_valuta"> lei</string>
    <string name="txt_list_asl_view_price">Preț: </string>
    <string name="txt_not_conected_printers">Nu ați conectat nici o imprimantă!</string>
    <string name="msg_document_save_stock_asl">Documentul a fost salvat! Numarul:</string>
    <string name="txt_designe_theme">Tema</string>
    <string name="txt_language_securitate">Limba</string>
    <string name="assortment_possible_not_download">Assortimentul posibil nu este descarcat.</string>
    <string name="msg_barcode_empty">Codul de bare nu este setat!</string>
    <string name="msg_select_revizie">Alegeți o revizie!</string>
    <string name="help">Ajutor</string>
    <string name="factura_de_intrare_dupa_suma">Factură de intrare după sumă</string>
    <string name="verfica_stocul_la_adaugarea_cantitatii">Verifica stocul la adaugarea cantității</string>
</resources>