<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/astavka"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingsMenu.WorkPlace"
    tools:ignore="MissingTranslation"
    tools:showIn="@layout/app_bar_workplace">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/txt_utilizator_workplace"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_user_workplace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="end"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_change_workplace"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/item_selector_button_blue"
                android:text="@string/btn_loc_de_munca_nedeterminat_workplace"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Switch
                android:id="@+id/switch_print_sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="Imprima vinzarile"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_check_stock_add_asl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/verfica_stocul_la_adaugarea_cantitatii"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_check_stock_worplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txt_verifica_stoc_vinzare"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_input_invoice_only_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/factura_de_intrare_dupa_suma"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_autoconfirm_workplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/switch_auto_confirmare_act_transfer"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_show_cod_workplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/switch_afisare_cod_workpalce"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_show_keyboard_workplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/switch_afisare_tastatura_workplace"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/txt_grupe_pentru_vizualizare_workplace"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_show_folders_workplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corners_transparent"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_folder_workplace"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/item_selector_button_blue"
                    android:text="@string/txt_adauga_count_inventroy"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_delete_folder_workplace"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/item_selector_button_blue"
                    android:text="@string/btn_sterge_workplace"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>