<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Sales"
    tools:showIn="@layout/app_bar_list_revision"
    tools:ignore="MissingTranslation">

    <LinearLayout
        android:id="@+id/headerLV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_corners_yelow_header"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingLeft="5dp"
            android:text="@string/txt_header_list_revision_depozit"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_header_list_revision_numarul"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_accept_revision"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/item_selector_button"
        android:text="@string/txt_accept_all"
        android:textAllCaps="false"
        android:textColor="@color/cornerButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_list_revision" />

    <Button
        android:id="@+id/btn_cancel_list_revision"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/item_selector_button"
        android:text="@string/txt_renunt_all"
        android:textAllCaps="false"
        android:textColor="@color/cornerButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_accept_revision"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_new_revision"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/item_selector_button_blue"
        android:text="@string/txt_creare_revizie_noua_revision"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_accept_revision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/LL_list_revision"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toTopOf="@+id/btn_new_revision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLV" />

</android.support.constraint.ConstraintLayout>